--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="GET-DELICIOUS-FOOD-head">
                     <h1>GET DELICIOUS FOOD <br>  AT YOUR DOORSTEPS,</h1>
                     <h3><span class="GET-DELICIOUS-FOOD-span"></span></h3>
-                    <button>order now</button>
+                    <a href="./pizza.html"><button>order now</button></a>
                 </div>
                 <div class="GET-DELICIOUS-FOOD-text">
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex illo laborum veniam,vitae
