--- a/cart.html
+++ b/cart.html
@@ -57,7 +57,7 @@
 
     
 <center>
-    <a href="payment.html"><button id="btn" class="paymant">proceed payment</button></a>
+    <a href="payment.html" id="btn" class="paymant">proceed payment</a>
 </center>
 </body>
 <script src="./main.js"></script>
