--- a/cart.html
+++ b/cart.html
@@ -56,9 +56,9 @@
     </div>
 
     
-<center>
-    <a href="payment.html" id="btn" class="paymant">proceed payment</a>
-</center>
+
+    <a href="payment.html"><button id="btn" class="paymant">proceed payment</button></a>
+    
 </body>
 <script src="./main.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
