--- a/cart.html
+++ b/cart.html
@@ -57,7 +57,7 @@
 
     
 
-    <a href="payment.html"><button id="btn" class="paymant">proceed payment</button></a>
+    <a href="./payment.html"><button id="btn" class="paymant">proceed payment</button></a>
     
 </body>
 <script src="./main.js"></script>
