--- a/cart.html
+++ b/cart.html
@@ -57,7 +57,7 @@
 
     
 
-    <a href="./payment.html" id="btn" class="paymant"><button>order now</button></a>
+    <a href="./payment.html"><button>order now</button></a>
 
     
 </body>
