--- a/cart.html
+++ b/cart.html
@@ -53,7 +53,9 @@
         <div class="Products">
             
         </div>
-        <button onclick="goToPage()">Make Payment</button>
+<div>
+            <button onclick="goToPage()">Make Payment</button>
+</div>
     </div>
 
     
